add SlidingWindow Op

--- a/tests/ut/cpp/dataset/CMakeLists.txt
+++ b/tests/ut/cpp/dataset/CMakeLists.txt
@@ -92,6 +92,7 @@ SET(DE_UT_SRCS
         perf_data_test.cc
         c_api_test.cc
 		tensor_op_fusion_pass_test.cc
+        sliding_window_op_test.cc
         )
 
 add_executable(de_ut_tests ${DE_UT_SRCS})
