add  sentence piece

--- a/mindspore/ccsrc/minddata/dataset/engine/datasetops/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/engine/datasetops/CMakeLists.txt
@@ -32,6 +32,7 @@ if (ENABLE_PYTHON)
         barrier_op.cc
         filter_op.cc
         build_vocab_op.cc
+        build_sentence_piece_vocab_op.cc
         )
 endif()
 
