--- a/tests/ut/cpp/dataset/CMakeLists.txt
+++ b/tests/ut/cpp/dataset/CMakeLists.txt
@@ -94,6 +94,7 @@ SET(DE_UT_SRCS
         tensor_op_fusion_pass_test.cc
         sliding_window_op_test.cc
         epoch_ctrl_op_test.cc
+        sentence_piece_vocab_op_test.cc
         )
 
 add_executable(de_ut_tests ${DE_UT_SRCS})
