--- a/mindspore/ccsrc/minddata/dataset/text/kernels/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/text/kernels/CMakeLists.txt
@@ -21,5 +21,6 @@ add_library(text-kernels OBJECT
         wordpiece_tokenizer_op.cc
         truncate_sequence_pair_op.cc
         to_number_op.cc
+        sentence_piece_tokenizer_op.cc
         ${ICU_DEPEND_FILES}
         )
