support cpp invert operation

--- a/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(kernels-image OBJECT
     decode_op.cc
     hwc_to_chw_op.cc
     image_utils.cc
+    invert_op.cc
     normalize_op.cc
     pad_op.cc
     random_color_adjust_op.cc
