inject epoch ctrl op in the execution tree and send eos at the end of epoch

--- a/mindspore/ccsrc/minddata/dataset/engine/datasetops/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/engine/datasetops/CMakeLists.txt
@@ -18,6 +18,7 @@ set(DATASET_ENGINE_DATASETOPS_SRC_FILES
     shuffle_op.cc
     zip_op.cc
     concat_op.cc
+    epoch_ctrl_op.cc
     cache_base_op.cc
     cache_lookup_op.cc
     cache_op.cc
