Added cpp Equalize op
adding missed files

Fixed Errors

fixed bugs

fixed bugs

fixed bugs

fixed bugs

fixed bugs

Updated Python UT for Equalize op

Added cpp Equalize op

adding missed files

Fixed Errors

fixed bugs

fixed bugs

fixed bugs

fixed bugs

fixed bugs

Updated Python UT for Equalize op

Fixed comment style

update files

deleted files

added files

added image_utils.h

Fixed PyLint and CPPLint Errors

updated tensor_op.h

--- a/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(kernels-image OBJECT
     center_crop_op.cc
     cut_out_op.cc
     decode_op.cc
+    equalize_op.cc
     hwc_to_chw_op.cc
     image_utils.cc
     invert_op.cc
