--- a/mindspore/ccsrc/frontend/parallel/CMakeLists.txt
+++ b/mindspore/ccsrc/frontend/parallel/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE _PARALLEL_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
 
-if (${CMAKE_SYSTEM_NAME} MATCHES "Windows" OR ENABLE_GE)
+if (NOT (ENABLE_CPU AND (ENABLE_D OR ENABLE_GPU)))
     list(REMOVE_ITEM _PARALLEL_SRC_FILES "ps/optimizer_info_builder.cc")
     list(REMOVE_ITEM _PARALLEL_SRC_FILES "ps/optimizer_info.cc")
     list(REMOVE_ITEM _PARALLEL_SRC_FILES "ps/scheduler.cc")
