add environment variable ASCEND_CUSTOM_FWK_PATH to support specific ascend software structutres

--- a/mindspore/ccsrc/CMakeLists.txt
+++ b/mindspore/ccsrc/CMakeLists.txt
@@ -164,7 +164,11 @@ if (ENABLE_D)
         endif ()
         set(ASCEND_DRIVER_PATH ${ASCEND_PATH}/driver/lib64/common)
         set(ASCEND_DRIVER_BACK_PATH ${ASCEND_PATH}/driver/lib64/driver)
-        set(ASCEND_RUNTIME_PATH ${ASCEND_PATH}/fwkacllib/lib64)
+        if (DEFINED ENV{ASCEND_CUSTOM_FWK_PATH})
+            set(ASCEND_RUNTIME_PATH $ENV{ASCEND_CUSTOM_FWK_PATH}/fwkacllib/lib64)
+        else ()
+            set(ASCEND_RUNTIME_PATH ${ASCEND_PATH}/fwkacllib/lib64)
+        endif ()
     endif()
 
     MESSAGE("USE DAV LIB PATH: ${ASCEND_PATH}")
